<resources>
    <string name="app_name">Sunya.Health</string>
    <string name="single_lead_ecg_lead_1">Single Lead ECG (Lead 1)</string>
    <string name="standard_limb_lead_ecg_lead_1_avf">Standard Limb Six Lead ECG (Lead 1-AVF)</string>
    <string name="standard_chest_lead_ecg_lead_v1_v6">Standard Chest Six Lead ECG (Lead V1-V6)</string>
    <string name="standard_12_lead_ecg_lead_1_v6">Standard 12 Lead ECG (Lead 1-V6)</string>

    <string name="register_device">Register Device</string>
    <string name="msg_device_registration_successfull">Device Registered Successfully</string>
    <string name="msg_device_not_registered">Device not registered</string>
    <string name="take_single_lead_ecg">Take Single Lead ECG</string>
    <string name="create_pdf">Create PDF</string>
    <string name="view_pdf">View PDF</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="ecginfo">Place two thumbs on the front sensors.           As shown in the image.Keep your hands in the same position for 15 seconds. </string>
    <string name="name">Name</string>
    <string name="fitnessecginfo">Place two thumbs on the front sensors.           As shown in the image.Keep your hands in the same position for 60 seconds. </string>
    <string name="V1ecginfo">For Lead V1 Place Side Sensor On Upper Right side of the chest(In the fourth intercostal space (between ribs 4 and 5) just to the right of the sternum (breastbone)) </string>
    <string name="V2ecginfo">For Lead V2 Place Side Sensor On Upper left side of the chest(In the fourth intercostal space (between ribs 4 and 5) just to the left of the sternum.) </string>
    <string name="V3ecginfo">For Lead V3 Place Side Sensor On Upper left side of the chest(Between leads V2 and V4.) </string>
    <string name="V4ecginfo">For Lead V4 Place Side Sensor On Lower left side of the chest(In the fifth intercostal space (between ribs 5 and 6) in the mid-clavicular line.) </string>
    <string name="V5ecginfo">For Lead V5 Place Side Sensor On Bottom left side of the chest(Horizontally even with V4, in the left anterior axillary line.) </string>
    <string name="V6ecginfo">For Lead V6 Place Side Sensor On Extreme left side of the chest(Horizontally even with V4 and V5 in the mid-axillary line.) </string>
    <string name="Leadtwoecginfo">For Lead LL Place Side Sensor On Extreme left side of the stomach </string>
    <string name="diabetesinfo"> Diabetes Info </string>
    <string name="urineinfo">Urine Info </string>
    <string name="msg_no_internet">Please check your internet connection</string>
    <string name="msg_timeout">Connection TimeOut! Please check your internet connection.</string>
    <string name="msg_503">503: The server could not be found. Please try again after some time.</string>
    <string name="msg_404">404: URL not found. Please try again after some time.</string>


    <string name="address">Address</string>
    <string name="age_yrs">Age</string>
    <string name="sex">Sex</string>
    <string name="submit">Print Report</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="temprature">Temperature</string>
    <string name="pulse">Pulse</string>
    <string name="sto">STO</string>
    <string name="patient_detail">Patient Detail</string>
    <string name="pr">PR</string>
    <string name="qrs">QRS</string>
    <string name="qt">QT</string>
    <string name="qtc">QTC</string>
    <string name="sdnn">SDNN</string>
    <string name="mrr">mRR</string>
    <string name="rmssd">rmssd</string>
    <string name="company_name">Sunya.Health</string>
    <string name="vital_test">Vital Test</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="divorced">Divorced</string>
    <string name="widowed">Widowed</string>
    <string name="do_you_have_any_diseases">Any Diseases?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="medication_s_medicine_name">Medication\'s Medicine Name</string>
    <string name="disease_name_s">Disease Name\'s</string>
    <string name="cigerrates_alcohol_hint">How often?</string>
    <string name="drug_allergies">Drug Allergies</string>
    <string name="unhealthy_habits">Unhealthy Habits</string>
    <string name="smoke">Smoking</string>
    <string name="alcohol_consumption">Alcohol</string>
    <string name="ptId">pt_ID</string>
    <string name="pieces">Pieces</string>
    <string name="pegs">Pegs</string>
    <string name="fitness_ecg_report">FITNESS ECG Report</string>
    <string name="vital_sign">VITAL SIGN</string>
    <string name="patient_report">PATIENT REPORT</string>
    <string name="daibetes">Daibetes</string>
    <string name="diabetes">Diabetes</string>
    <string name="glucose">Glucose</string>
    <string name="message_text">Alert!</string>
    <string name="ok_text">OK</string>
    <string-array name="search_option">
           <item>
            Name
        </item>
        <item>
            ID
        </item>
    </string-array>
    <string name="lead_2">Lead 2</string>
    <string name="lead_1">Lead 1</string>
    <string name="single_lead">Single Lead</string>
    <string name="pair_device">PAIR DEVICE</string>
    <string name="save_report">SAVE REPORT</string>
    <string name="take_again">Take Again</string>
    <string name="or">OR</string>
    <string name="fitness_test">Fitness Test</string>
    <string name="twelve_lead">Twelve Lead</string>
    <string name="take_lead_1">Take Lead 1</string>
    <string name="take_lead_1_again">Take Lead 1 again</string>
    <string name="lead_2_again">Lead 2 Again</string>
    <string name="v_1">V 1</string>
    <string name="v_1_again">V 1 Again</string>
    <string name="v_2">V 2</string>
    <string name="v_2_again">V 2 Again</string>
    <string name="v_3"> Take V 3</string>
    <string name="v_3_again"> Take V 3 Again</string>
    <string name="v_4">Take V 4</string>
    <string name="v_4_again">Take V 4 Again</string>
    <string name="v_5">Take V 5</string>
    <string name="v_5_again">Take V 5 Again</string>
    <string name="v_6">Take V 6</string>
    <string name="v_6_again">Take V 6 Again</string>
    <string name="take_twelve_lead_again">Take Twelve Lead Again</string>
    <string name="save_record">SAVE RECORD</string>
    <string name="view_report">VIEW REPORT</string>
    <string name="perform_test">Perform Test</string>
    <string name="ok">Ok</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="supper">Supper</string>
    <string name="snack">Snacks</string>
    <string name="random">Random</string>
    <string name="post_prandial">Post Prandial</string>
    <string name="fasting">Fasting</string>
    <string name="start_diabetes_test">Start Diabetes Test</string>
    <string name="r_u_ready">Any Meal Today after Wake Up?</string>
    <string name="what_was_your_latest_meal">What was your latest Meal?</string>
    <string name="any_meal_today_after_wake_up">Any Meal Today After Wake Up?</string>
    <string name="fast_reading">Fasting  Reading Glucose Test</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="two_parameter_urine_report">TWO PARAMETER URINE REPORT</string>
    <string name="diabetes_report">DIABETES REPORT</string>
    <string name="vital_report">VITAL REPORT</string>
    <string name="uric_acid_report">URIC ACID REPORT</string>
    <string name="urine_report">URINE REPORT</string>
    <string name="single_lead_ecg_report">SINGLE LEAD ECG REPORT</string>
    <string name="chest_six_lead_ecg_report">CHEST SIX LEAD ECG REPORT</string>
    <string name="limb_six_lead_ecg_report">LIMB SIX LEAD ECG REPORT</string>
    <string name="twelve_lead_ecg_report">TWELVE LEAD ECG REPORT</string>
    <string name="print_report">Print Report</string>
    <string name="complete_test">COMPLETE TEST</string>
    <string name="heartrate_in_bpm">HeartRate(in bpm)</string>
    <string name="normal_heart_rate">Normal Heart Rate</string>
    <string name="sync_data">SYNC DATA</string>


</resources>